--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,8 @@ dependencies {
 	
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.5.4'
-
+	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.5.11'
+}
 test {
 	useJUnitPlatform()
 }
