--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.5.4'
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.5.11'
+	// https://mvnrepository.com/artifact/org.postgresql/postgresql
+	implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.23'
+	
 }
 test {
 	useJUnitPlatform()
