--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,10 @@ logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappi
 #logging.level.org.hibernate.type.descriptor.sql=trace
 #spring.h2.console.enabled=true
 
-### Postgres init ###
+### Postgres init for deployment###
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
+
 
