--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
-#server.port=8080
+server.port=8080
 server.error.include-message=always
 logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=trace
 
-### H2 init ###
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#logging.level.org.hibernate.type.descriptor.sql=trace
-#spring.h2.console.enabled=true
+### H2 init for development ###
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type.descriptor.sql=trace
+spring.h2.console.enabled=true
 
 ### Postgres init for deployment###
-spring.jpa.database=POSTGRESQL
-spring.datasource.platform=postgres
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
+#spring.jpa.database=POSTGRESQL
+#spring.datasource.platform=postgres
+#spring.jpa.show-sql=true
+#spring.jpa.generate-ddl=true
 
 
